; ModuleID = '/home/carl/AnghaBench/freebsd/sys/i386/bios/extr_apm.c_apm_event_enable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/i386/bios/extr_apm.c_apm_event_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.apm_softc = type { i64, i32, i32 }

@apm_softc = common dso_local global %struct.apm_softc zeroinitializer, align 8
@.str = private unnamed_addr constant [27 x i8] c"called apm_event_enable()\0A\00", align 1
@apm_event_thread = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [11 x i8] c"apm worker\00", align 1
@.str.2 = private unnamed_addr constant [32 x i8] c"Cannot create apm worker thread\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @apm_event_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @apm_event_enable() #0 {
  %1 = alloca %struct.apm_softc*, align 8
  store %struct.apm_softc* @apm_softc, %struct.apm_softc** %1, align 8
  %2 = call i32 @APM_DPRINT(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %3 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %4 = icmp eq %struct.apm_softc* %3, null
  br i1 %4, label %10, label %5

5:                                                ; preds = %0
  %6 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %7 = getelementptr inbounds %struct.apm_softc, %struct.apm_softc* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %5, %0
  br label %23

11:                                               ; preds = %5
  %12 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %13 = getelementptr inbounds %struct.apm_softc, %struct.apm_softc* %12, i32 0, i32 1
  store i32 1, i32* %13, align 8
  %14 = load i32, i32* @apm_event_thread, align 4
  %15 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %16 = load %struct.apm_softc*, %struct.apm_softc** %1, align 8
  %17 = getelementptr inbounds %struct.apm_softc, %struct.apm_softc* %16, i32 0, i32 2
  %18 = call i64 @kproc_create(i32 %14, %struct.apm_softc* %15, i32* %17, i32 0, i32 0, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %11
  %21 = call i32 @panic(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.2, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %11
  br label %23

23:                                               ; preds = %22, %10
  ret void
}

declare dso_local i32 @APM_DPRINT(i8*) #1

declare dso_local i64 @kproc_create(i32, %struct.apm_softc*, i32*, i32, i32, i8*) #1

declare dso_local i32 @panic(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
